<resources>
    <string name="app_name">RestaurApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant">Restaurant</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="add_reservation">Add Reservation</string>
    <string name="reservations">reservations</string>
    <string name="item">Item</string>
    <string name="text">Text</string>
    <string name="textview">TextView</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>