<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvLine"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginTop="200dp"
    app:cardElevation="6dp">


    <LinearLayout
        android:id="@+id/Line"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/textview"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="45dp"
                android:layout_height="45dp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="15dp"
                android:text="@string/item"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/text"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>
