<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddResFragment">

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="@dimen/large_margin"
        android:layout_height="@dimen/large_margin"
        android:layout_marginBottom="@dimen/mid_margin"
        android:background="@drawable/custombutton"
        android:scaleType="fitXY"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/add" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/mid_margin"
        android:text="@string/title"
        app:layout_constraintBottom_toBottomOf="@+id/titleInput"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/titleInput" />

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mid_margin"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:minHeight="@dimen/large_margin"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/mid_margin"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="@+id/datePicker"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/datePicker" />

    <EditText
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mid_margin"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/date"
        android:inputType="date"
        android:minHeight="@dimen/large_margin"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/titleInput" />

    <EditText
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mid_margin"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/time"
        android:inputType="date"
        android:minHeight="@dimen/large_margin"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/datePicker"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/mid_margin"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="@+id/timePicker"
        app:layout_constraintEnd_toStartOf="@+id/timePicker"
        app:layout_constraintTop_toTopOf="@+id/timePicker" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/mid_margin"
        android:text="@string/restaurant"
        app:layout_constraintBottom_toBottomOf="@+id/restaurant"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/restaurant" />

    <EditText
        android:id="@+id/restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mid_margin"
        android:ems="10"
        android:hint="@string/restaurant"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/timePicker" />
</androidx.constraintlayout.widget.ConstraintLayout>